[package]
name = "bitcoin-network-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.32"
bytes = "1.7"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
rand = "0.8"
thiserror = "1.0"
tokio = { version = "1.34", features = ["rt", "macros", "rt-multi-thread", "sync", "net", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }